# kafkaStudy

./: .gitignore  CMakeLists.txt  README.md
common/: common.cpp  common.h  kafkaDispatcher.cpp  kafkaDispatcher.h  kafkaDispatcher.hpp  kafkaService.hpp
config/: configFraudConsumer.ini
fraud-detector-service/: fraudDetector.cpp  order.hpp
service-new-order/: newOrder.cpp  order.hpp
